# Multimodal-Product-Recommendation-System

./: .gitignore  README.md  RUN_COMMANDS.txt  TRAINING_README.md  check_gpu.bat  check_processes.py  cli_demo.py  data_pipeline.py  demo.py  install_pytorch.bat  main.py  main_enterprise.py  pyproject.toml  requirements.txt  run.py  sandbox_intent_demo.py  sandbox_persona_demo.py
MD/: LAUNCH_INSTRUCTIONS.md  README.md  README_GUI.md
config/: __init__.py  settings.py
core/: __init__.py  product_manager.py  recommendation_engine.py  user_insight_engine.py  user_manager.py
data/: __init__.py  database.py  models.py
data/cache/: deepseek_enrich_cache.json
data/chroma_storage/5090e099-481e-47a3-bc0e-16f97d261e22/: index_metadata.pickle
data/embeddings/: fused_features_concat.pkl  gpu_stats.json  image_features.pkl  image_features_simple.pkl  model_metrics.json  text_features_simple.pkl  user_profiles.pkl
data/meta/: orders.json  products.json  users_profile.json
data/metrics/: content_autoencoder_log.json
data/processed/: interactions.json  products.json  users.json
docs/: LOCAL_MODULAR_GUIDE.md  ui设计.md  数据加载.md  流程.md  规则.md  订单接口.md
models/: collaborative_filtering.pkl  content_based.pkl
module_admin_pyqt/: admin_dashboard.qss  local_data_monitor.py  main_window.py
module_backend/: main_api.py
module_frontend_vue/: index.html  package.json  vite.config.js
module_frontend_vue/src/: App.vue  api.js  authStorage.js  style.css
module_frontend_vue/src/components/: AIChatWidget.vue  AnalyticsDashboard.vue  CartCheckout.vue  CartModal.vue  DeepSeekChat.vue  EchartsDashboard.vue  InsightCenter.vue  LoginView.vue  OrderCenter.vue  ProductList.vue  ProductWaterfall.vue  RagSearchView.vue  RegisterView.vue
module_frontend_vue/src/mocks/: insightsMock.js
module_frontend_vue/src/utils/: localeZh.js
module_rag_ai/: deepseek_agent.py  model_worker.py  multimodal_embedding.py  order_agent.py  vector_db_manager.py
module_scraper/: web_scraper.py
requirements/: environment.yml
scripts/: init_database.py  setup_environment.py
tests/: __init__.py  base_test.py  test_user_manager.py
training/: __init__.py  download_dataset.py  export_figures.py  gpu_monitor.py  run_training_pipeline.py  train_manager.py  train_model.py  training_coordinator.py
ui/: UI_DESIGN.md  login_window.py  main_window.py  product_card.py  stats_panel.py  styles.py
utils/: __init__.py  exceptions.py  logger.py
visualization/: __init__.py  visualize_training.py
zz/: 2.md  end.md  reademe1.md
